Login -> BootData -> MainScreen de bout en bout (reframe ASM, Firebase, bridges)
- Reframe ASM (tools/reframe/ReframeJar.java, COMPUTE_FRAMES) : réécrit les 63249 classes de
  game-logic.jar avec des StackMapTable valides. Corrige le crash JVM generateOopMap.cpp
  (« Illegal class file ... in method loadBinaryData ») sur le bytecode dex2jar lors du parsing
  de unit_abilities.tabb pendant le handshake. Aucune sémantique modifiée (équivalent
  recompilation) ; permet de retirer -Xverify:none. Câblé dans run-desktop.sh (game-logic-framed.jar).

- Shadow com.google.firebase.perf.network.FirebasePerfUrlConnection : instrument() renvoie la
  connexion réelle inchangée. Neutralise la télémétrie Firebase (qui touchait le stub Android
  StrictMode et tuait le thread de téléchargement) tout en gardant le download HTTP réel.

- DhBridges : defaultReturn renvoie un no-op imbriqué pour les retours interface (et collections
  vides) → INative.createPurchasingInterface() non nul → plus de NPE dans setNativeAccess /
  handleBootData.

Résultat : le vrai client se connecte à notre LoginServer (TCP :8081), reçoit BootData1, exécute
handleBootData sans crash et atteint le MainScreen. Reste : NoSuchMethodError DataInput.readString()
sur les squelettes du décor (spine-libgdx vs DataInput modifié PerBlue) à corriger proprement.

Co-Authored-By: Claude <noreply@anthropic.com>